# crash-reports-recognizer

./: Cargo.toml  tagged-we.csv  tagged.csv  volgait2024-semifinal-result.csv
.cargo/: config.toml
src/: main.rs
