[package]
name = "crash-reports-recognizer"
version = "0.1.0"
edition = "2021"

# neural network

[dependencies.burn]
version = "0.14.0"
features = ["dataset", "tch", "train"]

[dependencies.burn-tch]
version = "0.14.0"

[dependencies.burn-train]
version = "0.14.0"

# [dependencies.tch-rs]
# version = "0.17.0"

# input data parsing

[dependencies.regex]
version = "1.11.0"

[dependencies.csv]
version = "1.3.0"

[dependencies.serde]
version = "1.0.210"
features = ["derive", "std"]

[dependencies.uuid]
version = "1.10.0"
features = ["serde", "v4"]